--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -152,7 +152,7 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
                     </div>
                 </form> 
             </div>
-            <div class="contact-form">
+            <div id="personal-contact" class="contact-form">
                 <h2>Für alles andere</h2>
                 <form name="contact-general" method="POST" data-netlify="true">
                     <input type="hidden" name="subject" value="Anfrage Massage" />
