--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -123,19 +123,19 @@ import { Icon } from "astro-icon";
 			<div class="card-row">
 				<Card
 					imgPath="img/massage1-opt.jpg"
-					href="/massage/"
+					href="/massage/#classic"
 					title="Klassische Massage"
 					body="Die Klassische Massage ist eine äusserliche, manuelle Behandlung zur Verbesserung/Beseitigung und Prävention von Beschwerden im Bereich des Bewegungsapparates (Muskeln, Sehnen, Bänder, Gelenke, und Nerven) und zur psychischen Entspannung."
 				/>
 				<Card
 					imgPath="img/massage2-opt.jpg"
-					href="/massage/"
+					href="/massage/#relaxing"
 					title="Entspannungsmassage"
 					body="Als Entspannungsmassage wird eine Massage bezeichnet, die nicht aus medizinischen Gründen durchgeführt wird, sondern ausschließlich der Entspannung dient. Sie dient vor allem zum Abbau von Stress auf geistiger und körperlicher Ebene und zur Steigerung des Wohlbefindens."
 				/>
 				<Card
 					imgPath="img/massage3-opt.jpg"
-					href="/massage/"
+					href="/massage/#sport"
 					title="Sportmassage"
 					body="Ziel und Zweck einer Sportmassage ist die spezifische Behandlung von Sportlern vor oder nach sportlichen Aktivitäten. Dabei werden Handgriffe der klassischen Massage verwendet, die durch verschiedene andere Grifftechniken erweitert werden. Auf diese Weise wird den speziellen Bedürfnissen von Sportlern Rechnung getragen."
 				/>
@@ -161,7 +161,8 @@ import { Icon } from "astro-icon";
 		<!-- Reviews -->
 		<div class="reviews">
 			<h1>Bewertungen</h1>
-			<p>Hier könnten Ihre Bewertungen sein</p>
+			<!-- <p>Hier könnten Ihre Bewertungen sein</p> -->
+			<SlideshowEventList1Img />
 			<!-- <div class="reviews-desktop">
 				<SlideshowEventList3Img />
 			</div>
