--- a/src/pages/massage.astro
+++ b/src/pages/massage.astro
@@ -16,6 +16,7 @@ import Footer from "../components/Footer.astro";
       <!-- massage cards -->
       <div class="card-section">
         <CardMassage
+          massageCardId="classic"
           collapseLinkId="collapse1"
           imgPath1="/img/massage1-opt.jpg"
           href1="#"
@@ -26,6 +27,7 @@ import Footer from "../components/Footer.astro";
           body2="<p>Die klassische Massage:</p><ul><li>stärkt das Immunsystem</li><li>lindert Schmerzen</li><li>reduziert Stress und dessen Auswirkungen wie: Kopfschmerzen, Migräne-Attacken, Schlafprobleme & Muskelverspannungen</li><li>entspannt/aktiviert die Muskulatur</li><li>verbessert den Zellstoffwechsel im Gewebe</li><li>löst Verklebungen und Narben</li><li>beeinflusst das vegetative Nervensystem indem es den Sympathikus hemmt und den Parasympathikus aktiviert.</li><li>senkt Blutdruck, Puls und Atemfrequenz</li><li>wirkt über Reflexbögen auf innere Organe</li><li>bringt psychische Entspannung</li></ul>"
         />
         <CardMassageReverse
+          reverseMassageCardId="relaxing"
           collapseLinkIdRev="collapse2"
           imgPathRev="/img/massage2-opt.jpg"
           hrefRev="#"
@@ -37,6 +39,7 @@ import Footer from "../components/Footer.astro";
           bodyRev2="<p>Bei einer Entspannungsmassage, die man auch Anti-Stress oder Relax Massage nennt, werden gleichmäßig langsame und rhythmische Bewegungen vorgenommen, mit dessen Hilfe sich Geist, Körper und Seele wieder erholen können.</p><br/><p>Die Basis der Massage die ich verwende ist die Hiromassage (oder Chiromassage) nach der Methode von Enrique Garcia. Das Wort <q>hiro</q>im Lateinischen wird als <q>Hand</q> übersetzt. Hiromassage entstand als Ergebnis der Vermischung von verschiedenen Techniken klassischer und orientalischer Massagesysteme sowie Elemente der Chiropraktik und Kinesiologie. Sie erhöht den Muskeltonus und lindert Muskelermüdung. Es hilft bei der Bewältigung der Muskelatonie, bei der Behandlung von Fibrose, Kontrakturen, Osteochondrose, Arthritis und Arthrose sowie bei Schwellungen.</p><br/><p>Die myo-intensive Massagetechnik der Hiromassage beeinflusst die Gelenke. Sie entfernt Blockaden, die durch Verletzungen, unangenehme statische Spannungen und Stress entstehen. Aus diesem Grund gibt es einen Muskelkrampf um das Gelenk und dann seine Blockade. Der Masseur entspannt zunächst die Muskeln des Patienten und wirkt dann schmerzfrei auf das Gelenk.</p<br/><p>Die neurosedative Methode der Hiromassage wird zur Bekämpfung von emotionalem und mentalem Stress eingesetzt. Es hilft, die Symptome von chronischer Müdigkeit, Schlafstörungen, Reizbarkeit loszuwerden. Es betrifft das Zentralnervensystem einer Person. Hiromassage kann die Widerstandskraft des Körpers gegen Stress erhöhen. Darüber hinaus stimuliert es auch die Lustzentren des Gehirns und setzt Endorphine frei. Diese Technik beinhaltet eine homogene, kontinuierliche und rhythmische Bewegung des Masseurs.</p><br/><p>Die Hiromassage wird auch zur hämolymphatischen Drainage eingesetzt. Es beeinflusst das menschliche Lymph- und Venensystem. Der Einsatzort ist in diesem Fall das periphere Kapillarnetz. Der Masseur führt in langsamem Tempo pulsierende, wellige Bewegungen aus. Es ist zu beachten, dass die Hiromassage nicht nur einen mechanischen, sondern auch einen starken Energieeffekt hat.</p><br/><p>Die Indikationen umfassen Gelenkerkrankungen (Arthrose, Osteochondrose und andere), Muskelatonie, chronische Müdigkeit, Schmerzen, erhöhte Nervenreizbarkeit, Schlafstörungen, Neurosen, Stress, Depressionen, Übergewicht, Cellulite, Fibrose, Ödeme, Falten, einige Gefäßerkrankungen, Hypertonizität der Muskeln, Funktionsstörungen der Talg- oder Schweißdrüsen, Erkrankungen des Lymphsystems, Verschlechterung des Hautzustands.</p><br/><p>Eine professionelle Hiromassage hilft, Verspannungen und Müdigkeit abzubauen, sich zu entspannen, den Muskeltonus zu erhöhen oder umgekehrt zu verringern, Schmerzen zu lindern, Verletzungen zu beseitigen, die Durchblutung und den Lymphfluss zu verbessern,Stoffwechselprozesse zu beschleunigen, den Hautzustand zu verbessern und den Körper zu verjüngen und sogar zusätzliche Pfunde loszuwerden.</p>"
         />
         <CardMassage
+          massageCardId="sport"
           collapseLinkId="collapse3"
           imgPath1="/img/massage3-opt.jpg"
           href1="#"
