--- a/src/components/ButtonGrey.astro
+++ b/src/components/ButtonGrey.astro
@@ -11,9 +11,9 @@ const { href, text } = Astro.props;
 
 <style>
     .button-grey {
-        width: 180px;
+        min-width: 180px;
         text-align: center;
-        padding: 12px 0px;
+        padding: 12px 20px;
         border-radius: 4px;
         border: none;
         background-color: #8E9AAF;
@@ -22,6 +22,7 @@ const { href, text } = Astro.props;
         display: inline-block;
         font-family: 'Philosopher', sans-serif;
         font-size: 15px;
+        box-sizing: border-box;
     }
 
     .button-grey:hover {
@@ -34,7 +35,7 @@ const { href, text } = Astro.props;
         .button-grey {
             width: 160px;
             font-size: 16px;
-            padding: 8px 0;
+            padding: 10px 0;
             /* display: block; */
             margin-left: auto;
             margin-bottom: 8px;
