--- a/src/components/ButtonPink.astro
+++ b/src/components/ButtonPink.astro
@@ -11,9 +11,9 @@ const { href, text } = Astro.props;
 
 <style>
     .button-pink {
-        width: 180px;
+        min-width: 180px;
         text-align: center;
-        padding: 12px 0px;
+        padding: 12px 20px;
         border-radius: 4px;
         border: none;
         background-color: #FEEAFA;
@@ -22,6 +22,7 @@ const { href, text } = Astro.props;
         display: inline-block;
         font-family: 'Philosopher', sans-serif;
         font-size: 15px;
+        box-sizing: border-box;
     }
 
     .button-pink:hover {
@@ -33,7 +34,7 @@ const { href, text } = Astro.props;
         .button-pink {
             width: 160px;
             font-size: 16px;
-            padding: 8px 0;
+            padding: 10px 0;
             margin-left: 5px;
             display: block;
             margin-left: auto;
