--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -45,6 +45,7 @@ const { title } = Astro.props;
 		line-height: 1.2;
 		margin: 0 auto;
 		max-width: 1100px;
+		scroll-padding-top: 103px; /* height of sticky header */
 		/* box-sizing: border-box; */
 	}
 
