moving up the buttons in a banner, chnging a quote in mobile version

--- a/src/components/BannerHome.astro
+++ b/src/components/BannerHome.astro
@@ -186,7 +186,7 @@ import Menu from "./Menu.astro";
 }
 
 .header-buttons {
-  padding-top: 5%;
+  padding-top: 0.5rem;
   padding-right: 0;
   text-align: right;
 }
