added prices for a praxisraum, changed Salzgrotte map link

--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -58,7 +58,7 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
                 </div>
                 <iframe 
                     loading="lazy"
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2698.0629521094816!2d8.585375799999998!3d47.449712299999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479a9ff24aa526c7%3A0xcf18b03a3a02f0fc!2sLindenstrasse%2023%2C%208302%20Kloten!5e0!3m2!1sen!2sch!4v1679263639898!5m2!1sen!2sch"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10792.284209060424!2d8.569043501467354!3d47.44955440000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47900abc36fce019%3A0x71211764b4e63c6d!2sSalzgrotte!5e0!3m2!1sen!2sch!4v1682434412593!5m2!1sen!2sch"
                     width="500"
                     height="300"
                     style="border:0;border-radius: 4px;"
