texarea padding in forms

--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -287,6 +287,12 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
         padding-left: 10px;
         box-sizing: border-box;
     }
+
+    .contact-form textarea {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+
     .contact-form label {
         width: 100px;
     }
