changed inquary message topic change to German

--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -126,7 +126,7 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
             <div class="contact-form">
                 <h2>Für Buchung in der Salzgrotte</h2>
                 <form name="contact-salzgrotte" method="POST" data-netlify="true">
-                    <input type="hidden" name="subject" value="Massage details inquiry" />
+                    <input type="hidden" name="subject" value="Anfrage Massage" />
                     <p>
                       <p><label>Vorname: </label></p>
                       <input type="text" name="Vorname" data-name="name" required/>
