--- a/src/pages/massage.astro
+++ b/src/pages/massage.astro
@@ -226,7 +226,7 @@ import Footer from "../components/Footer.astro";
 
   .contradict-section h3 {
     text-align: center;
-    padding-bottom: 20px;
+    /* padding-bottom: 20px; */
   }
 
   .contradict-bold {
