adde defer to Menu.astro

--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -27,7 +27,7 @@ const currentPath = pathName.slice(1); // remove the first "/"
   </div>
 </nav>
 
-<script>
+<script defer>
   const openNav = function () {
     document.getElementById("mySidepanel").style.width = "50%";
   };
