--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -1,6 +1,4 @@
 ---
-const pathName = new URL(Astro.request.url).pathname;
-const currentPath = pathName.slice(1); // remove the first "/"
 ---
 <nav>
   <a href="/">
@@ -8,10 +6,10 @@ const currentPath = pathName.slice(1); // remove the first "/"
   </a>
 
   <ul id="menu" class="header-menu">
-    <li><a class={currentPath === "" ? "active" : ""} href="/">Home</a></li>
-    <li><a class={currentPath === "about" ? "active" : ""} href="/about">Über mich</a></li>
-    <li><a class={currentPath === "massage" ? "active" : ""} href="/massage">Massage</a></li>
-    <li><a class={currentPath === "contacts" ? "active" : ""} href="/contacts">Kontakte</a></li>
+    <li><a href="/">Home</a></li>
+    <li><a href="/about">Über mich</a></li>
+    <li><a href="/massage">Massage</a></li>
+    <li><a href="/contacts">Kontakte</a></li>
   </ul>
 
   <div class="hamburger-menu">
@@ -27,7 +25,7 @@ const currentPath = pathName.slice(1); // remove the first "/"
   </div>
 </nav>
 
-<script defer>
+<script>
   const openNav = function () {
     document.getElementById("mySidepanel").style.width = "50%";
   };
@@ -78,13 +76,13 @@ const currentPath = pathName.slice(1); // remove the first "/"
     align-items: center;
   }
 
-  .header-menu a:hover {
+  /* .header-menu a:hover {
     text-decoration: underline;
-  }
+  } */
 
-  .active, .menuLink:hover {
+  /* .active, .menuLink:hover {
     text-decoration: underline;
-  }
+  } */
 
   .hamburger-menu {
     display: none;
