fixed typos, added revieis to mobile and tablet sizes, added transition to buttons

--- a/src/components/ButtonGrey.astro
+++ b/src/components/ButtonGrey.astro
@@ -23,6 +23,7 @@ const { href, text } = Astro.props;
         font-family: 'Philosopher', sans-serif;
         font-size: 15px;
         box-sizing: border-box;
+        transition: background-color 0.3s;
     }
 
     .button-grey:hover {
