--- a/src/components/SlideshowEventList1Img.astro
+++ b/src/components/SlideshowEventList1Img.astro
@@ -54,6 +54,31 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
     </div>
   </div>
 
+  <!-- slide 4 -->
+  <div class="slide-mobile">
+    <div class="slide-text">
+      <p>
+        Jedes Mal eine tolle, entspannende und einfühlsame Massage.
+        Verspannungen werden gelöst und ich gehe mit einem gutem Gefühl.
+        Nebenbei findet man auch immer Themen zum quatschen. Sehr zu empfehlen,
+        Elena weiss was sie tut. Danke.
+      </p>
+      <p>- Marco, 12. Mai 2023</p>
+    </div>
+  </div>
+
+  <!-- slide 5 -->
+  <div class="slide-mobile">
+    <div class="slide-text">
+      <p>
+        Meine kleine Auszeit bei Elena geniesse ich immer sehr! Sie hat mir
+        durch ihre zielgerichtete Massage schon oft den Gang zum Chiropraktiker
+        erspart, dafür bin ich sehr dankbar.
+      </p>
+      <p>- Imke, 25. Mai 2023</p>
+    </div>
+  </div>
+
   <!-- Control buttons -->
   <button class="btn-m btn-next-m">
     <Icon name="fa-solid:chevron-right" class="btn-icon" />
