--- a/src/components/SlideshowEventList2Img.astro
+++ b/src/components/SlideshowEventList2Img.astro
@@ -23,6 +23,7 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
       </p>
       <p>- Flavio, 10.05.2023</p>
     </div>
+
     <div class="slide-text">
       <p>
         Hallo liebe Elena. Ich gehe jedesmal völlig entspannt bei dir aus der
@@ -37,31 +38,32 @@ const { slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
   </div>
 
   <!-- slide 2 -->
-  <!-- <div class="slide-tablet">
+  <div class="slide-tablet">
     <div class="slide-text">
       <p>
-        She was amazing! Attentive, a great listener and communicator, working
-        out tough tension spots in a way I didn’t even, know was possible! I
-        wish I could afford to see her every week!
+        Absolut entspannende, verspannungslösende Massage bei Elena! Sie trifft
+        die richtigen Punkte mit dem richtigen Druck. Komme immer wieder gerne.
       </p>
-      <p>- Maria</p>
+      <p>- Sylvie, 11. Mai 2023</p>
     </div>
     <div class="slide-text">
       <p>
-        She knows her stuff! Walked out feeling brand spankin' new. I'll
-        definitely be back.
+        Jedes Mal eine tolle, entspannende und einfühlsame Massage.
+        Verspannungen werden gelöst und ich gehe mit einem gutem Gefühl.
+        Nebenbei findet man auch immer Themen zum quatschen. Sehr zu empfehlen,
+        Elena weiss was sie tut. Danke.
       </p>
-      <p>- Peter</p>
+      <p>- Marco, 12. Mai 2023</p>
     </div>
-  </div> -->
+  </div>
 
   <!-- Control buttons -->
-  <!-- <button class="btn-p btn-next-p">
+  <button class="btn-p btn-next-p">
     <Icon name="fa-solid:chevron-right" class="btn-icon" />
   </button>
   <button class="btn-p btn-prev-p">
     <Icon name="fa-solid:chevron-left" class="btn-icon" />
-  </button> -->
+  </button>
 </div>
 
 <script>
