--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -107,7 +107,7 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
                     Gehörlosensport (Nationalteams Curling und Futsal).
                 </p>
                 <p>
-                    Im Jahr 2019 hatte ich ein grosses Glück gehabt und eine
+                    Im Jahr 2019 hatte ich grosses Glück gehabt und eine
                     Stelle als Masseurin bei der Firma MMS <a href="https://www.medicalmassageservice.ch/" target="_blank">https://www.medicalmassageservice.ch/</a> gefunden, die
                     Massage am Arbeitsplatz bei verschiedenen Firmen anbietet.
                     Dort bin ich bis jetzt am Arbeiten.
