--- a/src/pages/massage.astro
+++ b/src/pages/massage.astro
@@ -77,7 +77,7 @@ import Footer from "../components/Footer.astro";
             Verletzungen der Integrität der Haut (Geschwüre, Verbrennungen,
             Wunden),
           </li>
-          <li>Infektionensktankheiten</li>
+          <li>Infektionenskrankheiten</li>
           <li>gewisse neurologische Erkrankungen</li>
           <li>
             während der ersten drei Schwangerschaftsmonaten sowie bei
