--- a/src/components/ButtonGreySubmit.astro
+++ b/src/components/ButtonGreySubmit.astro
@@ -23,6 +23,7 @@ const { text } = Astro.props;
         font-size: 15px;
         cursor: pointer;
         box-sizing: border-box;
+        transition: background-color 0.3s;
     }
 
     .button-grey:hover {
